# initech-shared

./: .gitignore  README.md  generate_openapi.py  openapi.json  openapi.yaml  pyproject.toml  requirements.txt  start-app.bat  start-app.py  start-app.sh
app/: main.py
app/api/: deps.py  ui.py
app/api/v1/: api.py
app/api/v1/endpoints/: roles.py  users.py
app/core/: config.py  database.py  middleware.py  security.py
app/crud/: __init__.py  base.py  crud_activity.py  crud_role.py  crud_token.py  crud_user.py
app/models/: __init__.py  activity.py  role.py  token.py  user.py
app/schemas/: __init__.py  activity.py  relationships.py  role.py  token.py  user.py
app/templates/: base.html
app/templates/dashboard/: error.html  index.html  role_detail.html  role_form.html  roles.html  secret_detail.html  secrets.html  user_detail.html  user_form.html  users.html
